--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flask Stock Visualizer</title>
+    <title>Equifax Project 2017 Boilerplate</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href={{ url_for('static', filename='./bower_components/bootstrap/dist/css/bootstrap.min.css') }} rel="stylesheet" media="screen">
     <link href={{ url_for('static', filename='main.css') }} rel="stylesheet" media="screen">
