adding index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,46 +66,31 @@
             .enter().append("path")
             .attr("class", "tract")
             .attr("d", path)
-            .on("click", clicked)
+//            .on("click", clicked)
             .style("fill", function(d){
                 if (d.properties.COUNTYFP == "121") {
                     console.log(d.properties)
-                    return "blue"
+                    return "yellow"
                 }
             })
             .append("title")
-            .text(function(d, i) { return d.id; })
+            .text(function(d, i) { return d.id; });
 
-        ;
 
         g.append("path")
             .attr("class", "tract-border")
             .datum(topojson.mesh(ny))
             .attr("d", path);
 
+        g.transition()
+            .duration(50)
+            .style("stroke-width", 1.5 / 4 + "px")
+            .attr("transform", "translate(" + "-500, -700" + ")scale(4)");
+
         console.log(g)
     });
 
 
-    function clicked(d) {
-        console.log("inside clicked");
-        if (active.node() === this) return reset();
-        active.classed("active", false);
-        active = d3.select(this).classed("active", true);
-
-        var bounds = path.bounds(d),
-            dx = bounds[1][0] - bounds[0][0],
-            dy = bounds[1][1] - bounds[0][1],
-            x = (bounds[0][0] + bounds[1][0]) / 2,
-            y = (bounds[0][1] + bounds[1][1]) / 2,
-            scale = .01 / Math.max(dx / width, dy / height),
-            translate = [width / 2 - scale * x, height / 2 - scale * y];
-
-        g.transition()
-            .duration(200)
-            .style("stroke-width", 1.5 / scale + "px")
-            .attr("transform", "translate(" + translate + ")scale(" + scale + ")");
-    }
 
     function reset() {
         active.classed("active", false);
