--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,7 @@
     var color = d3.scale.linear()
         .range(["rgb(213,222,217)","rgb(69,173,168)","rgb(84,36,55)","rgb(217,91,67)"]);
 
+    color.domain([0, 10]);
 
     d3.csv("../static/tract_scores.csv", function(csvfile) {
 //        color.domain([0, 1, 2, 3]); // setting the range of the input data
@@ -104,7 +105,9 @@
 //                .filter(function (d) {
 //                    return d.properties.COUNTYFP == "121"
 //                })
-                .style("fill", "yellow")
+                .style("fill", function(d){
+                    return color(d.properties['Q1']);
+                })
                 .attr("class", "tract_fulton");
 
             g.append("path")
