--- a/templates/index.html
+++ b/templates/index.html
@@ -99,10 +99,18 @@
 
                 g_tracts.forEach(function(d) {
                    d['color'] = d.properties['Q1'];
-                   console.log(d)
                 });
 
-                recolorTracts();
+                g.selectAll("path")
+                    .data(g_tracts)
+                    .enter()
+                    .append("path")
+                    .attr("class", "tract")
+                    .attr("d", path)
+                    .style("fill", function(d){
+                        return color(d['color']);
+                    })
+                    .attr("class", "tract_fulton");
 
                 g.append("path")
                     .attr("class", "tract-border")
@@ -118,19 +126,36 @@
         d3.select(self.frameElement).style("height", height + "px");
 
         function recolorTracts() {
+            console.log("inside recolor track");
+
             g.selectAll("path")
-                .data(g_tracts)
-                .enter()
-                .append("path")
-                .attr("class", "tract")
-                .attr("d", path)
                 .style("fill", function(d){
                     return color(d['color']);
                 })
-                .attr("class", "tract_fulton");
         }
 
-        d3.select('#slider').call(d3.slider().axis(true).min(1).max(32).step(1));
+        var detectChangeInSlider = function(s) {
+            g_tracts.forEach(function(d) {
+                d['color'] = d.properties['Q' + s.value().toString()];
+            });
+
+            recolorTracts();
+        };
+
+        var slider = d3.slider()
+            .min(1)
+            .max(32)
+            .ticks(32)
+            .showRange(true)
+            .tickFormat(function(d) {
+                return d + " Q";
+            })
+            .stepValues([1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32])
+            .value(1)
+            .callback(detectChangeInSlider);
+
+        // Render the slider in the div
+        d3.select('#slider').call(slider);
 
 
     </script>
