--- a/templates/crime.html
+++ b/templates/crime.html
@@ -1,10 +1,175 @@
 <!DOCTYPE html>
-<html lang="en">
+<meta charset="utf-8">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script src="//d3js.org/topojson.v1.min.js"></script>
+    <script src="../static/d3.slider.js"></script>
+    <link rel= "stylesheet" type= "text/css" href= "../static/d3.slider.css">
+    <style>
+
+        .tract {
+            fill: white
+        }
+
+        .tract_fulton:hover {
+            fill: purple
+        }
+
+        /*.tract-border {*/
+        /*fill: black;*/
+        /*stroke: #fff;*/
+        /*stroke-width: 1px;*/
+        /*stroke-linejoin: round;*/
+        /*stroke-linecap: round;*/
+        /*pointer-events: none;*/
+        /*}*/
+
+        path {
+            fill: none;
+            stroke: white;
+            stroke-width: .5px;
+            stroke-linejoin: round;
+            stroke-linecap: round;
+        }
+
+        path.tract_fulton {
+            stroke: black;
+        }
+
+        div.tooltip {
+            position: absolute;
+            text-align: center;
+            width: 60px;
+            height: 28px;
+            padding: 2px;
+            font: 12px sans-serif;
+            background: lightsteelblue;
+            border: 0px;
+            border-radius: 8px;
+            pointer-events: none;
+        }
+
+
+    </style>
 </head>
 <body>
-$END$
+<div id="slider"></div>
+
+<script type="text/javascript">
+
+    //Width and height
+    var w = 800;
+    var h = 600;
+
+    //Define map projection
+    var projection = d3.geo.mercator()
+        .translate([0, 0])
+        .scale(1);
+
+    //Define path generator
+    var path = d3.geo.path()
+        .projection(projection);
+
+    //Create SVG element
+    var svg = d3.select("body")
+        .append("svg")
+        .attr("width", w)
+        .attr("height", h);
+
+    var tooltipDiv = d3.select("body").append("div")
+        .attr("class", "tooltip")
+        .style("opacity", 0);
+
+
+    var color = d3.scale.linear()
+        .range(["rgb(213,222,217)","rgb(69,173,168)","rgb(84,36,55)","rgb(217,91,67)"]);
+
+    color.domain([0,100]);
+
+    var g_data;
+
+    d3.json("../static/Crime/ca.json", function (error, data) {
+
+        console.log(data.features);
+
+        var filtered_data_features = [];
+
+        for (var i = 0; i < data.features.length; i++) {
+            if (data.features[i].properties.CITY == 'Atlanta') {
+                filtered_data_features.push(data.features[i])
+            }
+        }
+
+        if (error) throw error;
+
+        // Calculate bounding box transforms for entire collection
+        var b = path.bounds( data ),
+            s = .95 / Math.max((b[1][0] - b[0][0]) / w, (b[1][1] - b[0][1]) / h),
+            t = [(w - s * (b[1][0] + b[0][0])) / 2, (h - s * (b[1][1] + b[0][1])) / 2];
+
+        // Update the projection
+        projection
+            .scale(s)
+            .translate(t);
+
+        //Bind data and create one path per GeoJSON feature
+        svg.selectAll("path")
+            .data(data.features)
+            .enter()
+            .append("path")
+            .attr("d", path)
+            .style("fill", function(d){
+                return "blue";
+            })
+            .on("mouseover", function(d) {
+                tooltipDiv.transition()
+                    .duration(200)
+                    .style("opacity", .9);
+                tooltipDiv.html(d.properties.NAME)
+                    .style("left", (d3.event.pageX) + "px")
+                    .style("top", (d3.event.pageY - 28) + "px");
+            })
+            .on("mouseout", function(d) {
+                tooltipDiv.transition()
+                    .duration(500)
+                    .style("opacity", 0);
+            });;
+    });
+
+
+    function recolorTracts() {
+        console.log("inside recolor track");
+
+        svg.selectAll("path")
+            .style("fill", function(d){
+                return color(d['color']);
+            })
+    }
+
+    var detectChangeInSlider = function(s) {
+        g_data.features.forEach(function(d) {
+            d['color'] = d.properties['Q' + s.value().toString()];
+        });
+
+        recolorTracts();
+    };
+
+    var slider = d3.slider()
+        .min(1)
+        .max(32)
+        .ticks(32)
+        .showRange(true)
+        .tickFormat(function(d) {
+            return d + " Q";
+        })
+        .stepValues([1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32])
+        .value(1)
+        .callback(detectChangeInSlider);
+
+    // Render the slider in the div
+    d3.select('#slider').call(slider);
+
+
+</script>
+
 </body>
-</html>
