--- a/static/main.css
+++ b/static/main.css
@@ -5,3 +5,62 @@ body {
   font: 12px sans-serif;
   font-weight: bold;
 }
+
+#legend {
+  padding: 1.5em 0 0 1.5em;
+}
+
+li.key {
+  border-top-width: 15px;
+  border-top-style: solid;
+  font-size: .75em;
+  width: 10%;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+li {
+  display: inline-block;
+}
+
+ .tract {
+   fill: white
+ }
+
+.tract_fulton:hover {
+  fill: purple
+}
+
+/*.tract-border {*/
+/*fill: black;*/
+/*stroke: #fff;*/
+/*stroke-width: 1px;*/
+/*stroke-linejoin: round;*/
+/*stroke-linecap: round;*/
+/*pointer-events: none;*/
+/*}*/
+
+path {
+  fill: none;
+  stroke: white;
+  stroke-width: .5px;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+}
+
+path.tract_fulton {
+  stroke: black;
+}
+
+div.tooltip {
+  position: absolute;
+  text-align: center;
+  width: 60px;
+  height: 28px;
+  padding: 2px;
+  font: 12px sans-serif;
+  background: lightsteelblue;
+  border: 0px;
+  border-radius: 8px;
+  pointer-events: none;
+}
