--- a/templates/atlanta.html
+++ b/templates/atlanta.html
@@ -4,57 +4,12 @@
     <script src="//d3js.org/d3.v3.min.js"></script>
     <script src="//d3js.org/topojson.v1.min.js"></script>
     <script src="../static/d3.slider.js"></script>
+    <link rel= "stylesheet" type= "text/css" href= "../static/main.css">
     <link rel= "stylesheet" type= "text/css" href= "../static/d3.slider.css">
-    <style>
-
-        .tract {
-            fill: white
-        }
-
-        .tract_fulton:hover {
-            fill: purple
-        }
-
-        /*.tract-border {*/
-        /*fill: black;*/
-        /*stroke: #fff;*/
-        /*stroke-width: 1px;*/
-        /*stroke-linejoin: round;*/
-        /*stroke-linecap: round;*/
-        /*pointer-events: none;*/
-        /*}*/
-
-        path {
-            fill: none;
-            stroke: white;
-            stroke-width: .5px;
-            stroke-linejoin: round;
-            stroke-linecap: round;
-        }
-
-        path.tract_fulton {
-            stroke: black;
-        }
-
-        div.tooltip {
-            position: absolute;
-            text-align: center;
-            width: 60px;
-            height: 28px;
-            padding: 2px;
-            font: 12px sans-serif;
-            background: lightsteelblue;
-            border: 0px;
-            border-radius: 8px;
-            pointer-events: none;
-        }
-
-
-    </style>
 </head>
 <body>
     <div id="slider"></div>
-
+    <div id="legend"></div>
     <script type="text/javascript">
 
         //Width and height
@@ -82,10 +37,33 @@
 
 
         var color = d3.scale.linear()
-            .range(["rgb(213,222,217)","rgb(69,173,168)","rgb(84,36,55)","rgb(217,91,67)"]);
+            .range(["rgb(213,222,217)","rgb(61,182,177)"]);
+
 
         color.domain([0,100]);
 
+        var color_discrete = d3.scale.quantize()
+            .range(["rgb(213,222,217)","rgb(175,212,207)","rgb(137,202,197)","rgb(99,192,187)","rgb(61,182,177)"]);
+
+        color_discrete.domain([0,100]);
+
+
+        var legend = d3.select('#legend')
+            .append('ul')
+            .attr('class', 'list-inline');
+
+        var keys = legend.selectAll('li.key')
+            .data(color_discrete.range());
+
+        keys.enter().append('li')
+            .attr('class', 'key')
+            .style('border-top-color', String)
+            .text(function(d) {
+                var r = color_discrete.invertExtent(d);
+                console.log(r)
+                return r[0] + "% - " + r[1] + "%";
+            });
+        
         var g_data;
 
         d3.csv("../static/atlanta_scores.csv", function(csvfile) {
